--- a/contact.html
+++ b/contact.html
@@ -218,6 +218,7 @@
     <button class="hamburger">&#9776;</button>
     <ul>
         <li><a href="index.html">Accueil</a></li>
+		<li><a href="activite.html">Activite</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
@@ -234,6 +235,7 @@
         <div class="contact-info">
             <h2>Restons en contact</h2>
             <p>
+                Vous êtes artiste, partenaire ou porteur de projet ? Contactez l’association pour échanger et collaborer.
             </p><p>
             Adresse : 7 Henri Becquerel, 92500 Rueil-Malmaison<br>
             Téléphones : 07 83 52 16 27 / 06 85 21 74 98<br>
@@ -244,7 +246,7 @@
 
         <!-- RIGHT COLUMN : FORM -->
         <div class="contact-form">
-            <form action="https://formspree.io/f/xjggrvrk" method="POST">
+            <form action="https://formspree.io/f/xbdyradq" method="POST">
                 <label>Prénom</label>
                 <input type="text" name="prenom" placeholder="Votre prénom">
 
